--- a/src/App.css
+++ b/src/App.css
@@ -110,3 +110,24 @@ input:focus {
   color: white;
   margin-top: 6rem;
 }
+
+.logoGoog{
+  width: 10%;
+  margin-right: 1rem;
+}
+
+.Or {
+  margin-right: 1%;
+}
+
+.Sign {
+  text-decoration: none;
+  font-weight: 600;
+  color: aqua;
+}
+
+
+.avatar {
+  border-radius: 50%;
+  width: 2rem;
+}
